--- a/admin/style.css
+++ b/admin/style.css
@@ -2,12 +2,50 @@ body, html {
     margin: 0;
     padding: 0;
     height: 100%;
-    width: 100%;
+    font-family: 'Roboto';
     overflow: hidden;
 }
 
-#map {
-    height: 100%;
-    width: 100%;
-    background-color: #ddd;
+/* Layout principal */
+#app  {display: flex; height: 100vh; }
+
+/* Sidebar */
+#sidebar {
+    width: 350px;
+    background: #f4f4f4;
+    border-right: 1px solid #ccc;
+    display: flex;
+    flex-direction: column;
+    z-index: 1000;
+    box-shadow: 2px 0 5px rgba(0,0,0,0.1);
 }
+
+/* Header - Sidebar */
+#sidebar-header { padding: 15px; background: #1d1d1b; color: white; }
+#sidebar-header h2 { margin: 0; font-size: 1.2rem; }
+
+/* Selecteur - Sidebar */
+#selector { padding: 10px; border-bottom: 1px solid #ddd; background: white; }
+#selector select { width: 100%; padding: 5px; }
+
+/* Outils Modes - Sidebar */
+#tools { padding: 10px; display: flex; gap: 5px; background: #e0e0e0; }
+.btn-mode { flex: 1; padding: 8px; border: none; cursor: pointer; background: #fff; border-radius: 4px; }
+.btn-mode:hover {background: #f3f3f3;}
+.btn-mode.active { background: #1d1d1b; color: white; font-weight: bold; }
+
+/* Zone de contenu dynamique - Sidebar */
+#sidebar-content { flex: 1; overflow-y: auto; padding: 15px; }
+
+/* Actions Bas - Sidebar */
+#actions { padding: 15px; border-top: 1px solid #ddd; background: white; display: flex; gap: 10px; }
+.btn-action { flex: 1; padding: 10px; cursor: pointer; border: none; border-radius: 4px; color: white; background-color: var(--btn-color); }
+.btn-save { --btn-color: #2196F3; }
+.btn-import { --btn-color: #FF9800; }
+.btn-action:hover { background-color: color-mix(in srgb, var(--btn-color), black 10%); }
+
+/* Carte */
+#map { flex: 1; height: 100%; cursor: crosshair; background-color: #ddd; }
+
+/* Utility */
+.hidden { display: none; }
