--- a/admin/style.css
+++ b/admin/style.css
@@ -42,7 +42,7 @@ body, html {
 #sidebar-content { flex: 1; overflow-y: auto; padding: 15px; }
 
 /* --- Recherche salle --- */
-#search-room { width: 95%; margin-bottom:10px; padding:5px; }
+#search-room { margin-bottom:10px; padding:5px; }
 /* --- Liste des salles --- */
 .room-item { padding: 8px; border-bottom: 1px solid #eee; cursor: pointer; }
 .room-item:hover { background: #f3f3f3; }
